--- a/rim/py_neo_quant_rim_sector_profit_calculate.ipynb
+++ b/rim/py_neo_quant_rim_sector_profit_calculate.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!open ."
+    "# !open ."
    ]
   },
   {
@@ -16,9 +16,16 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import NeoQuant as nq\n",
     "import requests\n",
-    "import math"
+    "import bs4\n",
+    "import math\n",
+    "import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import font_manager, rc\n",
+    "pd.set_option('display.max_colwidth', -1)\n",
+    "rc('font', family='AppleGothic')\n",
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "import NeoQuant as nq"
    ]
   },
   {
@@ -51,122 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://www.kisrating.co.kr/ratingsStatistics/statics_spread.do\n",
-    "expected_ratio = 7.91"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## get stock count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# company_name_list = ['이리츠코크렙', 'DL이앤씨', '맵스리얼티1']\n",
-    "company_name_list = ['신세계']\n",
-    "\n",
-    "company_code_list = []\n",
-    "for company_name in company_name_list:\n",
-    "    company_code = nq.get_company_code(company_name, companies)\n",
-    "    if len(company_code) > 0:\n",
-    "        company_code_list.append(company_code)\n",
-    "    else:\n",
-    "        print('no company code with ' + company_name)\n",
-    "company_code_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "company_code_list = companies.index"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## get fnguide info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "\n",
-    "total = len(company_code_list)\n",
-    "\n",
-    "for num, company_code in enumerate(company_code_list):\n",
-    "    try:\n",
-    "        company_name = nq.get_company_name(company_code, companies)\n",
-    "#         print(num, company_code, company_name)\n",
-    "        print(str(num + 1) + ' / ' + str(total) + \" : \" + company_name + ' (' + str(company_code) + ')')\n",
-    "\n",
-    "        time.sleep(1)\n",
-    "\n",
-    "        try:\n",
-    "            snapshot_tables = nq.request_fnguide_snapshot(company_code)\n",
-    "        except requests.exceptions.Timeout:\n",
-    "            time.sleep(60)\n",
-    "            snapshot_tables = fs_df = nq.request_fnguide_snapshot(company_code)\n",
-    "\n",
-    "        if len(snapshot_tables) < 10:\n",
-    "            print('>>>> not much data')\n",
-    "            continue\n",
-    "        temp_df = nq.make_basic_df(company_code, snapshot_tables)\n",
-    "        temp_df['name'] = company_name\n",
-    "        if num == 0:\n",
-    "            basic_df = temp_df\n",
-    "        else:\n",
-    "            basic_df = pd.concat([basic_df, temp_df], sort=False)\n",
-    "\n",
-    "        temp_df = nq.make_fr_df(company_code, snapshot_tables)\n",
-    "        if num == 0:\n",
-    "            fr_df = temp_df\n",
-    "        else:\n",
-    "            fr_df = pd.concat([fr_df, temp_df], sort=False)\n",
-    "    except ValueError:\n",
-    "        print('>>>> ValueError')\n",
-    "        continue\n",
-    "    except TypeError:\n",
-    "        print('>>>> TypeError')\n",
-    "        continue\n",
-    "    except KeyError:\n",
-    "        print('>>>> KeyError')\n",
-    "        continue\n",
-    "    \n",
-    "        \n",
-    "    if num == 20:\n",
-    "        break\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## save basic dataframe to excel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "basic_df.to_excel(r'data/basic_data.xlsx')"
+    "base_profit_ratio = nq.get_base_profit_ratio()\n",
+    "base_profit_ratio"
    ]
   },
   {
@@ -186,22 +79,6 @@
     "basic_df.index = basic_df[basic_df.columns[0]]\n",
     "basic_df.index.name = ''\n",
     "basic_df.drop(basic_df.columns[0], axis = 1, inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## save fr dataframe to excel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fr_df.to_excel(r'data/fr_data.xlsx')"
    ]
   },
   {
@@ -236,10 +113,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## spread"
+    "company_name_list = ['동신건설', '신세계건설', '서희건설', '삼성엔지니어링', 'GS건설', '남화토건',\n",
+    "                    '삼부토건', '대림건설', '한신공영', 'HDC현대산업개발', 'DL', '대우건설', \n",
+    "                    '동원개발', '우진아이엔에스', '삼호개발', '계룡건설산업', '화성산업', '남광토건',\n",
+    "                    '일성건설', '자이에스앤디', 'KCC건설', '우원개발', '현대건설',\n",
+    "                    '아이에스동서', '동부건설', 'HDC', '서한', '한라',\n",
+    "                    '금호산업', '태영건설', 'DL이앤씨', '웰크론', '한양이엔지',\n",
+    "                    '진흥기업', '티와이홀딩스', '이화공영', '신원종합개발', 'KD'\n",
+    "                    \n",
+    "                    ]"
    ]
   },
   {
@@ -248,7 +135,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expected_ratio = 7.91"
+    "company_name_list = ['DB금융투자', 'KTB투자증권', '대신증권', '한화투자증권', '신영증권', '한양증권',\n",
+    "                    '유안타증권', '코리아에셋투자증권', '교보증권', '현대차증권', '삼성증권', '유화증권', \n",
+    "                    '상상인증권', 'NH투자증권', '한국금융지주', '이베스트투자증권', '부국증권', 'SK증권',\n",
+    "                    '유진증권', '메리츠증권', '다우데이타', '키움증권', '미래에셋대우']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_code_list = []\n",
+    "for name in company_name_list:\n",
+    "    company_code = nq.get_company_code(name, companies)\n",
+    "    company_code_list.append(company_code)\n",
+    "company_code_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sector_df = basic_df.loc[company_code_list]"
    ]
   },
   {
@@ -266,9 +178,9 @@
    },
    "outputs": [],
    "source": [
-    "total = len(fr_df)\n",
+    "total = len(sector_df)\n",
     "\n",
-    "for num, code in enumerate(fr_df.index):\n",
+    "for num, code in enumerate(sector_df.index):\n",
     "    company_name = nq.get_company_name(code, companies)\n",
     "    print(str(num + 1) + ' / ' + str(total) + \" : \" + company_name + ' (' + str(code) + ')')\n",
     "\n",
@@ -287,39 +199,116 @@
     "                \n",
     "            if not math.isnan(roe) and not math.isnan(asset):\n",
     "                print('standard date : ' + col)\n",
-    "                stock_count = basic_df.loc[code]['주식수']\n",
-    "                basic_df.at[code, '기준일'] = col\n",
-    "                basic_df.at[code, 'roe'] = roe\n",
-    "                basic_df.at[code, 'per'] = per\n",
-    "                basic_df.at[code, 'pbr'] = pbr\n",
-    "                basic_df.at[code, '부채비율'] = debt_rate\n",
-    "                basic_df.at[code, '유보율'] = keep_rate\n",
-    "                basic_df.at[code, '배당수익률'] = interest_rate\n",
+    "                stock_count = sector_df.loc[code]['주식수']\n",
+    "                sector_df.at[code, '기준일'] = col\n",
+    "                sector_df.at[code, 'roe'] = roe\n",
+    "                sector_df.at[code, 'per'] = per\n",
+    "                sector_df.at[code, 'pbr'] = pbr\n",
+    "                sector_df.at[code, '부채비율'] = debt_rate\n",
+    "                sector_df.at[code, '유보율'] = keep_rate\n",
+    "                sector_df.at[code, '배당수익률'] = interest_rate\n",
     "                \n",
-    "                basic_df.at[code, 'expectation'] = expected_ratio\n",
+    "                sector_df.at[code, 'expectation'] = expected_ratio\n",
     "    #             print('stock_count : ' + str(stock_count))\n",
-    "                high = nq.get_more_adequate_price(asset, roe, expected_ratio, stock_count, 1)\n",
+    "                high = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 1)\n",
     "    #             print('high : ' + str(high))\n",
-    "                basic_df.at[code, 'high'] = high\n",
-    "                middle = nq.get_more_adequate_price(asset, roe, expected_ratio, stock_count, 0.9)\n",
-    "                basic_df.at[code, 'middle'] = middle\n",
-    "                low = nq.get_more_adequate_price(asset, roe, expected_ratio, stock_count, 0.8)\n",
-    "                basic_df.at[code, 'low'] = low\n",
+    "                sector_df.at[code, 'high'] = high\n",
+    "                middle = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 0.9)\n",
+    "                sector_df.at[code, 'middle'] = middle\n",
+    "                low = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 0.8)\n",
+    "                sector_df.at[code, 'low'] = low\n",
+    "                very_low = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 0.5)\n",
+    "                sector_df.at[code, 'very_low'] = very_low\n",
     "                break\n",
     "        except ValueError:\n",
     "            print('>>> ValueError')\n",
     "            continue\n",
     "\n",
     "\n",
-    "basic_df['dis_rate'] = basic_df['price'] / basic_df['low']\n",
-    "basic_df = basic_df.sort_values(by='dis_rate', ascending=True)"
+    "sector_df['dis_rate'] = sector_df['price'] / sector_df['low']\n",
+    "sector_df = sector_df.sort_values(by='dis_rate', ascending=True)\n",
+    "sector_df['rank'] = sector_df['dis_rate'].rank()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sector_df.to_excel(r'data/s_rim_sector.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sector_df.to_excel(r'data/construct_sector.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sector_df.to_excel(r'data/stock_sector.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 수익률 계산 시"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import bs4\n",
+    "import math\n",
+    "import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import font_manager, rc\n",
+    "pd.set_option('display.max_colwidth', -1)\n",
+    "rc('font', family='AppleGothic')\n",
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "import NeoQuant as nq"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## make report"
+    "## get all company list"
    ]
   },
   {
@@ -328,35 +317,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = basic_df\n",
-    "final_df = final_df.loc[~final_df.index.str.startswith('A9')]\n",
-    "final_df['dis_rate'] = final_df['price'] / final_df['low']\n",
-    "final_df = final_df.sort_values(by='dis_rate', ascending=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_df['rank'] = final_df['dis_rate'].rank()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_df = final_df.loc[final_df['roe'] > 0]"
+    "companies = nq.get_all_company_list()\n",
+    "companies.index = 'A' + companies.index"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## save all data"
+    "## low price sector"
    ]
   },
   {
@@ -365,14 +334,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_excel(r'data/s_rim_all_stock_data.xlsx')"
+    "sector_df = pd.read_excel(r'data/s_rim_sector.xlsx')\n",
+    "sector_df.index = sector_df[sector_df.columns[0]]\n",
+    "sector_df.index.name = ''\n",
+    "sector_df.drop(sector_df.columns[0], axis = 1, inplace = True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## filtering"
+    "## construct sector"
    ]
   },
   {
@@ -381,63 +353,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = final_df.loc[final_df['dis_rate'] > 0.1]\n",
-    "final_df = final_df.loc[final_df['dis_rate'] < 1]\n",
-    "final_df = final_df.loc[final_df['roe'] > final_df['expectation']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_df = final_df.loc[final_df['roe'] > 10]\n",
-    "final_df = final_df.loc[final_df['roe'] < 100]\n",
-    "final_df = final_df.loc[final_df['시가총액'] > 1000 * 100000000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_df = final_df.loc[final_df['배당수익률'] > 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_df = final_df.loc[~final_df['name'].str.contains('홀딩스')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_df = final_df.loc[final_df['roe'] > 10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(final_df)"
+    "sector_df = pd.read_excel(r'data/construct_sector.xlsx')\n",
+    "sector_df.index = sector_df[sector_df.columns[0]]\n",
+    "sector_df.index.name = ''\n",
+    "sector_df.drop(sector_df.columns[0], axis = 1, inplace = True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## save port"
+    "## stock sector"
    ]
   },
   {
@@ -446,14 +372,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_excel(r'data/port_data.xlsx')"
+    "sector_df = pd.read_excel(r'data/stock_sector.xlsx')\n",
+    "sector_df.index = sector_df[sector_df.columns[0]]\n",
+    "sector_df.index.name = ''\n",
+    "sector_df.drop(sector_df.columns[0], axis = 1, inplace = True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## load port"
+    "## 수익률 계산"
    ]
   },
   {
@@ -462,11 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# port_df = pd.read_excel(r'data/port_data.xlsx')\n",
-    "port_df = pd.read_excel(r'data/test_port_1.xlsx')\n",
-    "port_df.index = port_df[port_df.columns[0]]\n",
-    "port_df.index.name = ''\n",
-    "port_df.drop(port_df.columns[0], axis = 1, inplace = True)"
+    "port_df = sector_df"
    ]
   },
   {
@@ -487,7 +412,7 @@
     "port_list = port_df.index\n",
     "total = len(port_list)\n",
     "for num, company_code in enumerate(port_list):\n",
-    "    company_name = get_company_name(company_code, companies)\n",
+    "    company_name = nq.get_company_name(company_code, companies)\n",
     "    print(str(num + 1) + ' / ' + str(total) + \" : \" + company_name + ' (' + str(company_code) + ')')\n",
     "    time.sleep(1)\n",
     "    try:\n",
@@ -497,7 +422,7 @@
     "        price_df = nq.request_price_list(company_code, 'day', 100)\n",
     "        \n",
     "    current = price_df[price_df.columns[0]][-1]\n",
-    "    port_df.at[company_code, 'current'] = int(current)\n"
+    "    port_df.at[company_code, 'current'] = int(current)"
    ]
   },
   {
@@ -538,6 +463,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "port_df['profite_rate'] = profit_rate\n",
+    "port_df.sort_values(by='profite_rate', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "port_df.to_excel(r'data/stock_sector_profit.xlsx')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -550,21 +494,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "company_name = '대원산업'\n",
-    "company_code = nq.get_company_code(company_name, companies)\n",
+    "company_code_list = port_df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for company_code in company_code_list:\n",
+    "    company_name = nq.get_company_name(company_code, companies)\n",
     "\n",
+    "    price_df = nq.request_price_list(company_code, 'day', 1000)\n",
     "\n",
-    "price_df = nq.request_price_list(company_code, 'day', 1000)\n",
+    "    price_high = sector_df.loc[company_code]['high']\n",
+    "    price_middle = sector_df.loc[company_code]['middle']\n",
+    "    price_low = sector_df.loc[company_code]['low']\n",
+    "    price_very_low = sector_df.loc[company_code]['very_low']\n",
     "\n",
-    "price_high = basic_df.loc[company_code]['high']\n",
-    "price_middle = basic_df.loc[company_code]['middle']\n",
-    "price_low = basic_df.loc[company_code]['low']\n",
+    "    price_df['price_very_low'] = [price_very_low] * len(price_df)\n",
+    "    price_df['price_low'] = [price_low] * len(price_df)\n",
+    "    price_df['price_middle'] = [price_middle] * len(price_df)\n",
+    "    price_df['price_high'] = [price_high] * len(price_df)\n",
     "\n",
-    "price_df['price_low'] = [price_low] * len(price_df)\n",
-    "price_df['price_middle'] = [price_middle] * len(price_df)\n",
-    "price_df['price_high'] = [price_high] * len(price_df)\n",
-    "\n",
-    "nq.show_price_chart(company_code, company_name, price_df)"
+    "    nq.show_price_chart(company_code, company_name, price_df)"
    ]
   }
  ],
