--- a/rim/py_neo_quant_rim_low_price_screening_with_roa.ipynb
+++ b/rim/py_neo_quant_rim_low_price_screening_with_roa.ipynb
@@ -27,7 +27,7 @@
     "rc('font', family='AppleGothic')\n",
     "plt.rcParams['axes.unicode_minus'] = False\n",
     "\n",
-    "# pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_columns', None)\n",
     "# pd.set_option('display.max_rows', 500)"
    ]
   },
@@ -161,63 +161,91 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "fr_df = fr_df.replace('완전잠식', -1)\n",
+    "fr_df = fr_df.replace('N/A', -1)\n",
+    "\n",
+    "result_df = basic_df\n",
+    "\n",
+    "\n",
     "total = len(fr_df)\n",
     "\n",
     "for num, code in enumerate(fr_df.index):\n",
     "    company_name = nq.get_company_name(code, companies)\n",
     "    print(str(num + 1) + ' / ' + str(total) + \" : \" + company_name + ' (' + str(code) + ')')\n",
     "\n",
-    "#     print(num, code, company_name)\n",
-    "    for col in reversed(fr_df.columns.levels[0]):\n",
-    "#         print(fr_df[col]['ROE'])\n",
-    "        try:\n",
-    "            roe = pd.to_numeric(fr_df.loc[code][col]['ROE'])\n",
-    "            per = pd.to_numeric(fr_df.loc[code][col]['PER'])\n",
-    "            pbr = pd.to_numeric(fr_df.loc[code][col]['PBR'])\n",
-    "            asset = pd.to_numeric(fr_df.loc[code][col]['지배주주지분']) * 100000000\n",
-    "            debt_rate = pd.to_numeric(fr_df.loc[code][col]['부채비율'])\n",
-    "            keep_rate = pd.to_numeric(fr_df.loc[code][col]['유보율'])\n",
-    "            interest_rate = pd.to_numeric(fr_df.loc[code][col]['배당수익률'])\n",
+    "    company_df = fr_df.loc[[code]]\n",
+    "    \n",
+    "    # get valid year list\n",
+    "    valid_year_list = []\n",
+    "    for col in reversed(company_df.columns.levels[0]):\n",
+    "        roe = pd.to_numeric(company_df.loc[code][col]['ROE'])\n",
+    "        roa = pd.to_numeric(company_df.loc[code][col]['ROA'])\n",
+    "        net_profit = pd.to_numeric(company_df.loc[code][col]['지배주주지분']) * 100000000\n",
+    "        if not pd.isna(roe) and not pd.isna(net_profit):\n",
+    "            valid_year_list.append(col)\n",
+    "    \n",
+    "    if len(valid_year_list) == 0:\n",
+    "        print('>>> no valid year')\n",
+    "        continue\n",
     "\n",
-    "                \n",
-    "            if not math.isnan(roe) and not math.isnan(asset):\n",
-    "                print('standard date : ' + col)\n",
-    "                stock_count = basic_df.loc[code]['주식수']\n",
-    "                basic_df.at[code, '기준일'] = col\n",
-    "                basic_df.at[code, 'roe'] = roe\n",
-    "                basic_df.at[code, 'per'] = per\n",
-    "                basic_df.at[code, 'pbr'] = pbr\n",
-    "                basic_df.at[code, '부채비율'] = debt_rate\n",
-    "                basic_df.at[code, '유보율'] = keep_rate\n",
-    "                basic_df.at[code, '배당수익률'] = interest_rate\n",
-    "                \n",
-    "                basic_df.at[code, 'base profit'] = base_profit_ratio\n",
-    "    #             print('stock_count : ' + str(stock_count))\n",
-    "                high = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 1)\n",
-    "    #             print('high : ' + str(high))\n",
-    "                basic_df.at[code, 'high'] = high\n",
-    "                middle = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 0.9)\n",
-    "                basic_df.at[code, 'middle'] = middle\n",
-    "                low = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 0.8)\n",
-    "                basic_df.at[code, 'low'] = low\n",
-    "                very_low = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 0.5)\n",
-    "                basic_df.at[code, 'very_low'] = very_low\n",
+    "    # get roa list    \n",
+    "    roa_list = []\n",
+    "    for year in valid_year_list:\n",
+    "        roa = pd.to_numeric(company_df.loc[code][year]['ROA'])\n",
+    "        roa_list.append(str(roa))\n",
+    "        \n",
+    "    \n",
+    "    recent_year = valid_year_list[0]\n",
+    "    roe = pd.to_numeric(company_df.loc[code][recent_year]['ROE'])\n",
+    "    net_profit = pd.to_numeric(company_df.loc[code][recent_year]['지배주주지분']) * 100000000\n",
+    "    per = pd.to_numeric(company_df.loc[code][recent_year]['PER'])\n",
+    "    pbr = pd.to_numeric(company_df.loc[code][recent_year]['PBR'])\n",
+    "    debt_rate = pd.to_numeric(company_df.loc[code][recent_year]['부채비율'])\n",
+    "    keep_rate = pd.to_numeric(company_df.loc[code][recent_year]['유보율'])\n",
+    "    interest_rate = pd.to_numeric(company_df.loc[code][recent_year]['배당수익률'])\n",
     "\n",
-    "                break\n",
-    "        except ValueError:\n",
-    "            print('>>> ValueError')\n",
-    "            continue\n",
+    "    result_df.at[code, '기준일'] = recent_year\n",
+    "    result_df.at[code, 'valid_year'] = ','.join(valid_year_list)\n",
+    "    result_df.at[code, 'roe'] = roe\n",
+    "    result_df.at[code, 'roa_list'] = ','.join(roa_list)\n",
+    "    result_df.at[code, 'per'] = per\n",
+    "    result_df.at[code, 'pbr'] = pbr\n",
+    "    result_df.at[code, '부채비율'] = debt_rate\n",
+    "    result_df.at[code, '유보율'] = keep_rate\n",
+    "    result_df.at[code, '배당수익률'] = interest_rate\n",
+    "\n",
+    "    result_df.at[code, 'base profit'] = base_profit_ratio\n",
+    "    \n",
+    "    stock_count = result_df.loc[code]['주식수']\n",
+    "\n",
+    "#             print('stock_count : ' + str(stock_count))\n",
+    "    high = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 1)\n",
+    "    result_df.at[code, 'high'] = high\n",
+    "    middle = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.9)\n",
+    "    result_df.at[code, 'middle'] = middle\n",
+    "    low = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.8)\n",
+    "    result_df.at[code, 'low'] = low\n",
+    "    very_low = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.5)\n",
+    "    result_df.at[code, 'very_low'] = very_low\n",
+    "\n",
     "\n",
     "try:\n",
-    "    basic_df['dis_rate'] = basic_df['price'] / basic_df['low']\n",
-    "    basic_df = basic_df.sort_values(by='dis_rate', ascending=True)\n",
+    "    result_df['dis_rate'] = result_df['price'] / result_df['low']\n",
+    "    result_df = result_df.sort_values(by='dis_rate', ascending=True)\n",
     "except KeyError:\n",
-    "    print('>>>>> KeyError')"
+    "    print('>>>>> KeyError')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_df"
    ]
   },
   {
@@ -233,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = basic_df\n",
+    "final_df = result_df\n",
     "final_df = final_df.loc[~final_df.index.str.startswith('A9')]\n",
     "final_df['dis_rate'] = final_df['price'] / final_df['low']\n",
     "final_df = final_df.sort_values(by='dis_rate', ascending=True)"
@@ -255,6 +283,15 @@
    "outputs": [],
    "source": [
     "final_df = final_df.loc[final_df['roe'] > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df"
    ]
   },
   {
