--- a/rim/py_neo_quant_rim_make_base_fr_dataframe.ipynb
+++ b/rim/py_neo_quant_rim_make_base_fr_dataframe.ipynb
@@ -25,7 +25,11 @@
     "from matplotlib import font_manager, rc\n",
     "pd.set_option('display.max_colwidth', -1)\n",
     "rc('font', family='AppleGothic')\n",
-    "plt.rcParams['axes.unicode_minus'] = False"
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "# pd.set_option('display.max_rows', 500)"
    ]
   },
   {
@@ -62,13 +66,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## if not all company"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "company_name_list = ['신세계']\n",
-    "company_code_list = nq.get_company_code_list(company_name_list)"
+    "# company_name_list = ['에스씨엠생명과학', '박셀바이오', '셀레믹스']\n",
+    "# 'JTC' // 2월 결산\n",
+    "# '한국주철관' // 3월 결산\n",
+    "# '만호제강' // 6월 결산\n",
+    "# 'SNK' // 7월 결산\n",
+    "# '풍강' // 8월 결산\n",
+    "# '인터엠' // 9월 결산\n",
+    "# '현대약품' // 11월 결산\n",
+    "\n",
+    "company_name_list = ['삼성전자', '박셀바이오', 'JTC', '한국주철관공업', '만호제강', 'SNK', '풍강', '인터엠', '현대약품']\n",
+    "company_code_list = nq.get_company_code_list(company_name_list, companies)\n",
+    "company_code_list"
    ]
   },
   {
@@ -86,7 +107,6 @@
    },
    "outputs": [],
    "source": [
-    "import time\n",
     "\n",
     "total = len(company_code_list)\n",
     "\n",
@@ -107,8 +127,7 @@
     "        if len(snapshot_tables) < 10:\n",
     "            print('>>>> not much data')\n",
     "            continue\n",
-    "        temp_df = nq.make_basic_df(company_code, snapshot_tables)\n",
-    "        temp_df['name'] = company_name\n",
+    "        temp_df = nq.make_basic_df(company_code, company_name, snapshot_tables)\n",
     "        if num == 0:\n",
     "            basic_df = temp_df\n",
     "        else:\n",
@@ -130,8 +149,8 @@
     "        continue\n",
     "    \n",
     "        \n",
-    "    if num == 20:\n",
-    "        break\n"
+    "#     if num == 20:\n",
+    "#         break\n"
    ]
   },
   {
