--- a/rim/py_neo_quant_rim_low_price_screening_with_roa.ipynb
+++ b/rim/py_neo_quant_rim_low_price_screening_with_roa.ipynb
@@ -182,7 +182,6 @@
     "    valid_year_list = []\n",
     "    for col in reversed(company_df.columns.levels[0]):\n",
     "        roe = pd.to_numeric(company_df.loc[code][col]['ROE'])\n",
-    "        roa = pd.to_numeric(company_df.loc[code][col]['ROA'])\n",
     "        net_profit = pd.to_numeric(company_df.loc[code][col]['지배주주지분']) * 100000000\n",
     "        if not pd.isna(roe) and not pd.isna(net_profit):\n",
     "            valid_year_list.append(col)\n",
@@ -192,14 +191,15 @@
     "        continue\n",
     "\n",
     "    # get roa list    \n",
-    "    roa_list = []\n",
+    "    rim_roa_list = []\n",
     "    for year in valid_year_list:\n",
-    "        roa = pd.to_numeric(company_df.loc[code][year]['ROA'])\n",
-    "        roa_list.append(str(roa))\n",
+    "        rim_roa = pd.to_numeric(company_df.loc[code][year]['RIM_ROA'])\n",
+    "        rim_roa_list.append(str(rim_roa))\n",
     "        \n",
     "    \n",
     "    recent_year = valid_year_list[0]\n",
     "    roe = pd.to_numeric(company_df.loc[code][recent_year]['ROE'])\n",
+    "    roa = pd.to_numeric(company_df.loc[code][recent_year]['ROA'])\n",
     "    net_profit = pd.to_numeric(company_df.loc[code][recent_year]['지배주주지분']) * 100000000\n",
     "    per = pd.to_numeric(company_df.loc[code][recent_year]['PER'])\n",
     "    pbr = pd.to_numeric(company_df.loc[code][recent_year]['PBR'])\n",
@@ -208,9 +208,10 @@
     "    interest_rate = pd.to_numeric(company_df.loc[code][recent_year]['배당수익률'])\n",
     "\n",
     "    result_df.at[code, '기준일'] = recent_year\n",
-    "    result_df.at[code, 'valid_year'] = ','.join(valid_year_list)\n",
+    "    result_df.at[code, 'valid_year_list'] = ','.join(valid_year_list)\n",
     "    result_df.at[code, 'roe'] = roe\n",
-    "    result_df.at[code, 'roa_list'] = ','.join(roa_list)\n",
+    "    result_df.at[code, 'roa'] = roa\n",
+    "    result_df.at[code, 'rim_roa_list'] = ','.join(rim_roa_list)\n",
     "    result_df.at[code, 'per'] = per\n",
     "    result_df.at[code, 'pbr'] = pbr\n",
     "    result_df.at[code, '부채비율'] = debt_rate\n",
