--- a/rim/py_neo_quant_rim_make_base_fr_dataframe.ipynb
+++ b/rim/py_neo_quant_rim_make_base_fr_dataframe.ipynb
@@ -87,7 +87,10 @@
     "# '인터엠' // 9월 결산\n",
     "# '현대약품' // 11월 결산\n",
     "\n",
-    "company_name_list = ['삼성전자', '박셀바이오', 'JTC', '한국주철관공업', '만호제강', 'SNK', '풍강', '인터엠', '현대약품']\n",
+    "# company_name_list = ['삼성전자', '박셀바이오', 'JTC', '한국주철관공업', '만호제강', 'SNK', '풍강', '인터엠', '현대약품']\n",
+    "# company_name_list = ['이리츠코크렙', '에이리츠', '케이탑리츠', '하이골드3호', '바다로19호', '하이골드12호', '모두투어리츠', '신한알파리츠']\n",
+    "# company_name_list = ['이리츠코크렙', '에이리츠', '케이탑리츠', '하이골드3호', '바다로19호', '하이골드12호', '모두투어리츠', '신한알파리츠']\n",
+    "company_name_list = ['대덕전자']\n",
     "company_code_list = nq.get_company_code_list(company_name_list, companies)\n",
     "company_code_list"
    ]
@@ -124,15 +127,24 @@
     "            time.sleep(60)\n",
     "            snapshot_tables = fs_df = nq.request_fnguide_snapshot(company_code)\n",
     "\n",
-    "        if len(snapshot_tables) < 10:\n",
+    "        if len(snapshot_tables) < 12:\n",
     "            print('>>>> not much data')\n",
     "            continue\n",
+    "            \n",
+    "        data_df = snapshot_tables[10]\n",
+    "        if len(data_df) < 20:\n",
+    "            data_df = snapshot_tables[11]\n",
+    "        if len(data_df) < 20:\n",
+    "            print('>>>> not much data 2')\n",
+    "            continue\n",
+    "   \n",
     "        temp_df = nq.make_basic_df(company_code, company_name, snapshot_tables)\n",
     "        if num == 0:\n",
     "            basic_df = temp_df\n",
     "        else:\n",
     "            basic_df = pd.concat([basic_df, temp_df], sort=False)\n",
     "\n",
+    "        \n",
     "        temp_df = nq.make_fr_df(company_code, snapshot_tables)\n",
     "        if num == 0:\n",
     "            fr_df = temp_df\n",
@@ -149,7 +161,7 @@
     "        continue\n",
     "    \n",
     "        \n",
-    "#     if num == 20:\n",
+    "#     if num == 10:\n",
     "#         break\n"
    ]
   },
@@ -233,6 +245,15 @@
     "\n",
     "fr_df.columns = [new_big_col, small_col]\n",
     "fr_df = fr_df.loc[ fr_df.index.dropna() ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fr_df"
    ]
   }
  ],
