--- a/rim/py_neo_quant_rim_low_price_screening_with_roa.ipynb
+++ b/rim/py_neo_quant_rim_low_price_screening_with_roa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "plt.rcParams['axes.unicode_minus'] = False\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
-    "# pd.set_option('display.max_rows', 500)"
+    "pd.set_option('display.max_rows', 500)"
    ]
   },
   {
@@ -166,6 +166,9 @@
    "source": [
     "fr_df = fr_df.replace('완전잠식', -1)\n",
     "fr_df = fr_df.replace('N/A', -1)\n",
+    "fr_df = fr_df.replace('N/A(IFRS)', -1)\n",
+    "\n",
+    "\n",
     "\n",
     "result_df = basic_df\n",
     "\n",
@@ -246,7 +249,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_df"
+    "filtered_list = []\n",
+    "for code in result_df.index:\n",
+    "#     print(code)\n",
+    "    company_df = result_df.loc[code]\n",
+    "    if type(company_df['rim_roa_list']) != str:\n",
+    "#         print(code + 'no roa list')\n",
+    "        continue\n",
+    "    roa_list = company_df['rim_roa_list'].split(',')\n",
+    "    if len(roa_list) < 3:\n",
+    "        continue\n",
+    "        \n",
+    "    bingo = True\n",
+    "    for roa in roa_list:\n",
+    "        if float(roa) < 10:\n",
+    "            bingo = False\n",
+    "            break\n",
+    "    if bingo:\n",
+    "        filtered_list.append(code)\n",
+    "    \n",
+    "# print(filtered_list)\n",
+    "\n",
+    "filtered_df = result_df.loc[filtered_list]\n",
+    "filtered_df = filtered_df.loc[filtered_df['배당수익률'] >= 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_df"
    ]
   },
   {
@@ -262,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = result_df\n",
+    "final_df = filtered_df\n",
     "final_df = final_df.loc[~final_df.index.str.startswith('A9')]\n",
     "final_df['dis_rate'] = final_df['price'] / final_df['low']\n",
     "final_df = final_df.sort_values(by='dis_rate', ascending=True)"
@@ -304,11 +338,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_excel(r'data/s_rim_all_stock_data.xlsx')"
+    "final_df.to_excel(r'data/s_rim_roa_filtered.xlsx')"
    ]
   },
   {
@@ -389,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_excel(r'data/test_port_1.xlsx')"
+    "final_df.to_excel(r'data/s_rim_roa_filtered.xlsx')"
    ]
   },
   {
@@ -406,7 +440,7 @@
    "outputs": [],
    "source": [
     "# port_df = pd.read_excel(r'data/port_data.xlsx')\n",
-    "port_df = pd.read_excel(r'data/test_port_1.xlsx')\n",
+    "port_df = pd.read_excel(r'data/s_rim_roa_filtered.xlsx')\n",
     "port_df.index = port_df[port_df.columns[0]]\n",
     "port_df.index.name = ''\n",
     "port_df.drop(port_df.columns[0], axis = 1, inplace = True)"
