--- a/rim/py_neo_quant_rim_low_price_screening_with_roa.ipynb
+++ b/rim/py_neo_quant_rim_low_price_screening_with_roa.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !open ."
+    "!open ."
    ]
   },
   {
@@ -28,7 +28,7 @@
     "plt.rcParams['axes.unicode_minus'] = False\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.max_rows', 500)"
+    "# pd.set_option('display.max_rows', 500)"
    ]
   },
   {
@@ -199,6 +199,10 @@
     "        rim_roa = pd.to_numeric(company_df.loc[code][year]['RIM_ROA'])\n",
     "        rim_roa_list.append(str(rim_roa))\n",
     "        \n",
+    "    roe_list = []\n",
+    "    for year in valid_year_list:\n",
+    "        roe = pd.to_numeric(company_df.loc[code][year]['ROE'])\n",
+    "        roe_list.append(str(roe))\n",
     "    \n",
     "    recent_year = valid_year_list[0]\n",
     "    roe = pd.to_numeric(company_df.loc[code][recent_year]['ROE'])\n",
@@ -215,6 +219,7 @@
     "    result_df.at[code, 'roe'] = roe\n",
     "    result_df.at[code, 'roa'] = roa\n",
     "    result_df.at[code, 'rim_roa_list'] = ','.join(rim_roa_list)\n",
+    "    result_df.at[code, 'roe_list'] = ','.join(roe_list)\n",
     "    result_df.at[code, 'per'] = per\n",
     "    result_df.at[code, 'pbr'] = pbr\n",
     "    result_df.at[code, '부채비율'] = debt_rate\n",
@@ -241,6 +246,13 @@
     "    result_df = result_df.sort_values(by='dis_rate', ascending=True)\n",
     "except KeyError:\n",
     "    print('>>>>> KeyError')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3년 동안 ROA 10 이상, 배당 수익률 1 이상  필터링"
    ]
   },
   {
@@ -272,6 +284,42 @@
     "\n",
     "filtered_df = result_df.loc[filtered_list]\n",
     "filtered_df = filtered_df.loc[filtered_df['배당수익률'] >= 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3년 동안 ROE 가 상향 중"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_list = []\n",
+    "for code in filtered_df.index:\n",
+    "#     print(code)\n",
+    "    company_df = filtered_df.loc[code]\n",
+    "    if type(company_df['roe_list']) != str:\n",
+    "        print(code + 'no roe list')\n",
+    "        continue\n",
+    "    roe_list = company_df['roe_list'].split(',')\n",
+    "    if len(roe_list) < 3:\n",
+    "        continue\n",
+    "        \n",
+    "    new_roe_list = []\n",
+    "    for roe in reversed(roe_list):\n",
+    "        new_roe_list.append(float(roe))\n",
+    "\n",
+    "    if nq.generally_increasing(new_roe_list, 2):\n",
+    "        filtered_list.append(code)\n",
+    "    \n",
+    "# print(filtered_list)\n",
+    "\n",
+    "filtered_df = filtered_df.loc[filtered_list]"
    ]
   },
   {
@@ -338,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
