--- a/rim/py_neo_quant_rim_low_price_screening_with_roa.ipynb
+++ b/rim/py_neo_quant_rim_low_price_screening_with_roa.ipynb
@@ -28,7 +28,7 @@
     "plt.rcParams['axes.unicode_minus'] = False\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
-    "# pd.set_option('display.max_rows', 500)"
+    "pd.set_option('display.max_rows', 500)"
    ]
   },
   {
@@ -128,8 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# company_name_list = ['에스씨엠생명과학', '박셀바이오', '셀레믹스']\n",
-    "company_name_list = ['박셀바이오']"
+    "company_name_list = ['에스씨엠생명과학', '박셀바이오', '셀레믹스']\n",
+    "# company_name_list = ['삼성전자']"
    ]
   },
   {
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3년 동안 ROA 10 이상, 배당 수익률 1 이상  필터링"
+    "## 5년 동안 ROA 10 이상, 배당 수익률 1 이상  필터링"
    ]
   },
   {
@@ -269,7 +269,7 @@
     "#         print(code + 'no roa list')\n",
     "        continue\n",
     "    roa_list = company_df['rim_roa_list'].split(',')\n",
-    "    if len(roa_list) < 3:\n",
+    "    if len(roa_list) < 5:\n",
     "        continue\n",
     "        \n",
     "    bingo = True\n",
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3년 동안 ROE 가 상향 중"
+    "## 5년 동안 ROE 가 상향 중"
    ]
   },
   {
@@ -307,28 +307,20 @@
     "        print(code + 'no roe list')\n",
     "        continue\n",
     "    roe_list = company_df['roe_list'].split(',')\n",
-    "    if len(roe_list) < 3:\n",
+    "    if len(roe_list) < 5:\n",
+    "        print('roe list less than 5 with ' + code)\n",
     "        continue\n",
     "        \n",
     "    new_roe_list = []\n",
     "    for roe in reversed(roe_list):\n",
     "        new_roe_list.append(float(roe))\n",
     "\n",
-    "    if nq.generally_increasing(new_roe_list, 2):\n",
+    "    if nq.generally_increasing(new_roe_list, 4):\n",
     "        filtered_list.append(code)\n",
     "    \n",
-    "# print(filtered_list)\n",
+    "print(filtered_list)\n",
     "\n",
     "filtered_df = filtered_df.loc[filtered_list]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filtered_df"
    ]
   },
   {
