--- a/rim/py_neo_quant_rim_make_base_fr_dataframe.ipynb
+++ b/rim/py_neo_quant_rim_make_base_fr_dataframe.ipynb
@@ -88,9 +88,10 @@
     "# '현대약품' // 11월 결산\n",
     "\n",
     "# company_name_list = ['삼성전자', '박셀바이오', 'JTC', '한국주철관공업', '만호제강', 'SNK', '풍강', '인터엠', '현대약품']\n",
+    "company_name_list = ['이리츠코크렙', '에이리츠', '케이탑리츠', '하이골드3호', '바다로19호', '하이골드12호', '모두투어리츠', '신한알파리츠']\n",
     "# company_name_list = ['이리츠코크렙', '에이리츠', '케이탑리츠', '하이골드3호', '바다로19호', '하이골드12호', '모두투어리츠', '신한알파리츠']\n",
-    "# company_name_list = ['이리츠코크렙', '에이리츠', '케이탑리츠', '하이골드3호', '바다로19호', '하이골드12호', '모두투어리츠', '신한알파리츠']\n",
-    "company_name_list = ['대덕전자']\n",
+    "# company_name_list = ['삼성전자']\n",
+    "# company_name_list = ['대덕전자']\n",
     "company_code_list = nq.get_company_code_list(company_name_list, companies)\n",
     "company_code_list"
    ]
@@ -131,12 +132,12 @@
     "            print('>>>> not much data')\n",
     "            continue\n",
     "            \n",
-    "        data_df = snapshot_tables[10]\n",
-    "        if len(data_df) < 20:\n",
-    "            data_df = snapshot_tables[11]\n",
-    "        if len(data_df) < 20:\n",
-    "            print('>>>> not much data 2')\n",
-    "            continue\n",
+    "#         data_df = snapshot_tables[10]\n",
+    "#         if len(data_df) < 20:\n",
+    "#             data_df = snapshot_tables[11]\n",
+    "#         if len(data_df) < 20:\n",
+    "#             print('>>>> not much data 2')\n",
+    "#             continue\n",
     "   \n",
     "        temp_df = nq.make_basic_df(company_code, company_name, snapshot_tables)\n",
     "        if num == 0:\n",
@@ -150,18 +151,18 @@
     "            fr_df = temp_df\n",
     "        else:\n",
     "            fr_df = pd.concat([fr_df, temp_df], sort=False)\n",
-    "    except ValueError:\n",
-    "        print('>>>> ValueError')\n",
+    "    except ValueError as e:\n",
+    "        print('>>>> ValueError : ' + str(e))\n",
     "        continue\n",
-    "    except TypeError:\n",
-    "        print('>>>> TypeError')\n",
+    "    except TypeError as e:\n",
+    "        print('>>>> TypeError : ' + str(e))\n",
     "        continue\n",
-    "    except KeyError:\n",
-    "        print('>>>> KeyError')\n",
+    "    except KeyError as e:\n",
+    "        print('>>>> KeyError : ' + str(e))\n",
     "        continue\n",
     "    \n",
     "        \n",
-    "#     if num == 10:\n",
+    "#     if num == 20:\n",
     "#         break\n"
    ]
   },
@@ -245,15 +246,6 @@
     "\n",
     "fr_df.columns = [new_big_col, small_col]\n",
     "fr_df = fr_df.loc[ fr_df.index.dropna() ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fr_df"
    ]
   }
  ],
